--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -35,6 +35,7 @@
 
     <string name="toolbarSearch">Search</string>
     <string name="toolbarProfile">Profile</string>
+    <string name="toolbarRefresh">Refresh</string>
     <string name="title_activity_maps">Map</string>
     <string name="title_activity_splash">SplashActivity</string>
 
